# spacy_dev

./: check_entities.py  config.json  config.py  debug_failing_tests.py  layers.py  nlp_analyzer_architecture.py  nlp_analyzer_refactored.py  pyproject.toml  run_spacy.py  run_spacy_lg.py  run_spacy_trf.py  spacy_nlp_analyzer_explained.md  test_fixes.py  tmp.py.py
