[tool.poetry]
name = "spacy-dev"
version = "0.1.0"
description = ""
authors = ["George <georgemathewkurian@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.12,<3.14"
pandas = "^2.3.0"
spacy = "^3.8.7"
nltk = "^3.9.1"
keybert = "^0.9.0"
sentence-transformers = "^5.0.0"
webcolors = "^24.11.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
